[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI scenes/ItemSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://StephenAssets/cars/Plane2.png" type="Texture" id=2]
[ext_resource path="res://MainScene/Customers/Customers/Customer.gd" type="Script" id=3]
[ext_resource path="res://MainScene/Customers/Customers/CustomItemSlot.tscn" type="PackedScene" id=4]
[ext_resource path="res://StephenAssets/misc/cloud/Thought bubble.png" type="Texture" id=5]
[ext_resource path="res://StephenAssets/misc/cloud/Tiny thought bubble.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Arriving"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 200 ), Vector2( -61.9372, 47.3452 ), Vector2( -26.0184, 20.9673 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/MarginContainer/NinePatchRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tiny thought bubble:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2.5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Leaving"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tiny thought bubble:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 72.6236, 56.3527 ), Vector2( 200, 200 ) ]
}

[node name="Customer" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Arriving = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Leaving = SubResource( 3 )

[node name="texture" type="Sprite" parent="."]
position = Vector2( -200, 200 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -76.0
margin_right = 27.0
margin_bottom = 11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_right = 24.0
margin_bottom = 50.0
rect_min_size = Vector2( 48, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 56.0
margin_bottom = 60.0
texture = ExtResource( 5 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="OrderIngredients" type="GridContainer" parent="Control/MarginContainer"]
margin_right = 56.0
margin_bottom = 60.0
columns = 2

[node name="Ing1" parent="Control/MarginContainer/OrderIngredients" instance=ExtResource( 4 )]
self_modulate = Color( 1, 1, 1, 0.313726 )

[node name="Ing2" parent="Control/MarginContainer/OrderIngredients" instance=ExtResource( 4 )]
margin_left = 30.0
margin_right = 56.0

[node name="Ing3" parent="Control/MarginContainer/OrderIngredients" instance=ExtResource( 4 )]
margin_top = 32.0
margin_bottom = 60.0

[node name="Ing4" parent="Control/MarginContainer/OrderIngredients" instance=ExtResource( 4 )]
margin_left = 30.0
margin_top = 32.0
margin_right = 56.0
margin_bottom = 60.0

[node name="ItemSlot" parent="Control" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -13.0
margin_top = -28.0
margin_right = 13.0
margin_bottom = 0.0

[node name="NinePatchRect" parent="Control/ItemSlot" index="0"]
self_modulate = Color( 1, 1, 1, 0 )

[node name="Tiny thought bubble" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -14.0676, -11.4663 )
texture = ExtResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="item_added" from="Control/ItemSlot" to="." method="_on_ItemSlot_item_added"]

[editable path="Control/ItemSlot"]
